--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
-    <string name="app_name">Movies</string>
+    <string name="app_name"> Movies</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string-array name="sort_type">
+        <item>Most Popular</item>
+        <item>High Rated</item>
+    </string-array>
+    <string-array name="sort_type_values">
+        <item>popularity</item>
+        <item>top_rated</item>
+    </string-array>
 </resources>
